--- a/products/templates/products/_card.html
+++ b/products/templates/products/_card.html
@@ -4,12 +4,9 @@
 
 
 <div class="card announcement-card m-1 serv-section-2">
-    {%  if  object.picture %}
-    <div class="serv-section-2-icon d-none d-md-block"> 
-        <img class="avatar rounded img-responsive" src="{% thumbnail object.picture 'profile_avatar_show' %}">
-    </div>
-    <div class="serv-section-2-icon d-md-none"> 
-        <img class="avatar rounded img-responsive" src="{% thumbnail object.picture 'profile_avatar_show_mobile' %}">
+    {% if object.picture %}
+    <div class="serv-section-2-icon"> 
+        <img class="avatar rounded img-responsive" src="{% thumbnail object.picture 'product' %}">
     </div>
     {% endif %}
         <div class="serv-section-desc">
