--- a/soccerbase/templates/soccerbase/tables/base_modal_filters.html
+++ b/soccerbase/templates/soccerbase/tables/base_modal_filters.html
@@ -14,7 +14,7 @@
         </div>
 
         <form id="filter-form-mobile" method="get" class="form-inline ">
-          <div class="modal-body row no-gutters">
+          <div class="modal-body d-flex-column">
 
               {% block modal_body %}
                       
