--- a/users/templates/account/roles_modal.html
+++ b/users/templates/account/roles_modal.html
@@ -13,35 +13,50 @@
 
       <div class="modal-body">
       <div>
-      
+          <div>
+            <small>
+            Dla ról piłkarz, trener oraz klub wprowadzone dane są przez nas weryfikowane. 
+            Chcemy uniknąć fałszywych kont. W ciągu 24-48h otrzymasz powiadomienie oraz nadamy wszystkie uprawnienia, 
+            jeśli podane przez Ciebie informacje są prawdziwe.
+            </small>
+          </div>
           <br>
-            <h5><strong>Piłkarz</strong></h5>
+            <h5 class="main-color"><strong>Piłkarz</strong><i class="icofont-funky-man" style="font-size:1.6em;"></i></h5>
             <p>
-            <small>Dla zawodników oraz zawodniczek zarejestrowanych w ramach rozgrywek PZPN, a także dla osób zaczynających przygodę z piłką nożną. Dodaj video. 
-            Zweryfikuj się wpisując poprawne dane. 
-            My znajdziemy Twoje statystyki. Twoje piłkarskie CV będzie gotowe, a wtedy wszystko w Twoich nogach. </small>
-            
+            <small>Dla wszystkich aktywnych piłkarzy i piłkarek w Polsce. 
+            Dla stawiających pierwsze kroki w futbolu oraz tych wracających do gry. 
+            Dla zawodników zza granicy, którzy chcą sprawdzić się w Polsce. Wskaż nam, gdzie szukać danych, a my uzupełnimy Twój piłkarski profil o realne statystyki. 
+            Dołącz do bazy ponad 2000 zawodników, korzystaj z produktów piłkarskich i daj sobie szansę zaistnieć w świecie futbolu!</small>
             </p>
+       
+            <h5 class="main-color"><strong>Trener</strong><i class="icofont-man-in-glasses" style="font-size:1.6em;"></i></h5>
+            <p><small>Dla trenerów z aktywną licencją oraz wszystkich w trakcie kursu trenerskiego. 
+            Szukaj wzmocnień swojej kadry w bazie ponad 2000 piłkarzy i zgłoś zapotrzebowanie na zawodników na piłkarskiej tablicy OLX . 
+            Promuj swoje trenerskie CV, korzystaj z produktów dla trenera i daj sobie szansę zaistnieć w świecie futbolu!</small></p>
             
-            <h5><strong>Trener</strong></h5>
-            <p><small>Dla licencjonowanych trenerów oraz dla trenerów w trakcie kursu. Obserwuj, szukaj piłkarzy, ogłaszaj testy i wzmacniaj swoją kadrę.</small></p>
-            
-            <h5><strong>Klub / Szkółka piłkarska</strong></h5>
-            <h5><strong>Agent piłkarski</strong></h5>
-            <h5><strong>Skaut</strong></h5>
-            <h5><strong>Rodzic małego piłkarza</strong></h5>
-            <h5><strong>Kibic</strong></h5>
+            <h5 class="main-color"><strong>Klub/szkółka</strong><i class="icofont-business-man-alt-2" style="font-size:1.6em;"></i></h5>
+            <p><small>Dla wszystkich zarządzających klubami (prezesi, dyrektorzy, kierownicy, członkowie zarządu).
+             Rozwijaj swoją drużynę i szukaj wzmocnień w bazie ponad 2000 piłkarzy oraz ponad 200 trenerów. 
+            Ogłoś testy dla zawodników na piłkarskiej tablicy OLX. Promuj swój klub, korzystaj z produktów dodatkowych i daj sobie szansę zaistnieć w świecie futbolu!</small></p>
+
+
+            <h5 class="main-color"><strong>Skaut</strong><i class="icofont-woman-in-glasses" style="font-size:1.6em;"></i></h5><p><small>Dla skautów z doświadczeniem, skautów amatorów oraz wszystkich, którzy chcą postawić pierwsze kroki w skautingu. 
+            Korzystaj z bazy piłkarzy oraz z aplikacji skautingowej i dołącz do największej siatki skautingowej w Polsce. Daj o sobie znać w świecie futbolu!</small></p>
+
+            <h5 class="main-color"><strong>Rodzic małego piłkarza</strong><i class="icofont-hotel-boy" style="font-size:1.6em;"></i></h5>
+            <p><small>Dla wszystkich, którzy chcą przyczynić się do piłkarskiego rozwoju przyszłości futbolu. 
+            Monitoruj testy piłkarskie i nabory do szkółek w całej Polsce, skorzystaj z zajęć indywidualnych w okolicy dla swojej pociechy i promuj talent 
+            Twojego małego zawodnika w świecie piłki nożnej!</small></p>
+
+            <h5 class="main-color"><strong>Kibic</strong><i class="icofont-boy" style="font-size:1.6em;"></i></h5>
+            <p><small>Dla pasjonatów futbolu, którzy chcą obserwować zawodników, trenerów i kluby wszystkich szczebli rozgrywkowych w Polsce. 
+            Śledź losy swoich ulubieńców i wspieraj ich rozwój. Przyczyń się do rozwoju piłki nożnej w Twojej okolicy!</small></p>
         </ul>
       </div>
-
           <div class="modal-footer">
-           
             <button type="button" class="btn btn-secondary" data-dismiss="modal">{% trans 'UKRYJ' %}</button>
           </div>
-  
-
       </div>
-      
     </div>
   </div>
 </div>
