--- a/fantasy/templates/fantasy/_table.html
+++ b/fantasy/templates/fantasy/_table.html
@@ -12,7 +12,7 @@
             <th scope="col" class="d-none d-md-table-cell">{% trans 'Pozycja' %}</th>
             <th scope="col" class="d-none d-md-table-cell">{% trans 'Drużyna' %}</th>
             <th scope="col" class="d-none d-md-table-cell">{% trans 'Poziom rozgrywkowy' %}</th>
-            <th scope="col" class="d-none d-md-table-cell">{% trans 'Wojewódźtwo' %}</th>
+            <th scope="col" class="d-none d-md-table-cell">{% trans 'Województwo' %}</th>
 
         </tr>
     </thead>
@@ -24,9 +24,8 @@
            <td class="d-md-none">
                 <strong>{{ object.place }}</strong> <br>
                 <small class="text-muted">
-                    {{ object.score  }} <span class="text-muted">pkt<span> 
-                    {{ object.games_played|default:0 }} meczy
-
+                    <strong>Pkt: {{ object.score }}</strong>
+                    Mecze:{{ object.games_played|default:0 }}
                 </small>
             </td>
             <td class="d-md-none">
@@ -39,7 +38,7 @@
                 <strong>{{ object.player.profile.display_position_fantasy|default:''|upper}}</strong>
                 {{ object.player.profile.display_team|default:''|upper}},
                 {{ object.player.profile.display_league|default:'' }},
-                {{ object.player.profile.display_voivodeship|default:''|lower }},
+                {{ object.player.profile.display_voivodeship|default:''|lower }}
                 </small>
             </td>
             <td class="d-none d-md-table-cell">{{ object.place }}</td>
@@ -51,7 +50,6 @@
                         {% if object.player.profile.age %}{% trans 'l.' %} {% endif %} 
                     </strong>
                 </a>
-
             </td>
             <td class="d-none d-md-table-cell">{{ object.player.profile.display_position_fantasy|default:''|upper}}</td>
             <td class="d-none d-md-table-cell">{{ object.player.profile.display_team|default:''|upper}}</td>
