--- a/marketplace/templates/marketplace/base.html
+++ b/marketplace/templates/marketplace/base.html
@@ -1,8 +1,14 @@
 {% extends 'platform/base.html' %}
 {% load static %}
+{% load playmaker %}
+
 
 {% block title %}{{ block.super }} {{ page_title }} {% endblock %}
 
+{% block extra_css %}
+    {{ block.super }}
+    <link href="{% static 'assets/css/filters.css' %}" rel="stylesheet">
+{% endblock %}
 
 {% block content_header %}
     {% include '_page_heading.html' with heading_title=page_title size=4 %}
@@ -152,24 +158,25 @@
 .serv-section-2:hover:before {
     background: #e76668;
 }
-
-
-
-
-
 </style>
 
+<section id="marketplace" class="marketplace">
+    <div class="container-fluid">
+        <div class="row">
 
-<section id="marketplace" class="marketplace"> 
-<div class="container-fluid">
+            <div class="d-flex">
+                <div>
+                    {% add_announcement %}
+                </div>
+                <div>
+                    <button type="button" class="icofont-paperclip {% if my %}btn-request btn-requested{% else %}btn-request{% endif %}" onclick="window.location.href='{% if my %}{% url 'marketplace:announcements' %}{% else %}{% url 'marketplace:my_announcements' %}{% endif %}';">{% if my %}Wszystkie{% else %}Moje{% endif %} ogłoszenia</button>
+                </div>
+            </div>
 
-        <div class="row"> 
-            <div class="col-md-2"> {% include 'marketplace/add.html' %}</div>
-            <div class="col-md-10">  {% include 'marketplace/filters.html' %}</div>
+            <div class="d-flex">
+                {% include 'marketplace/filters.html' %}</div>
             <div class="col-md-12">
-            <small>
-                    {% include 'marketplace/plandescription.html' %}
-                </small>
+                <small>{% include 'marketplace/_plandescription.html' %}</small>
             </div>
         </div>
 
@@ -180,16 +187,13 @@
                 </div>
             {% empty %}
                 <div class="col-12 text-center">
-                    <h1>Brak nowych ogłoszeń</h1>
-                    <img class="img-responsive" src="{% static 'assets/img/panga_1.png' %}">
+                    {% include 'marketplace/_empty_data.html' %}
                 </div>
             {% endfor %}
-            
         </div>
-        
         {% include 'platform/partials/_pagination.html' with object_type='ogłoszeń' %}
         
- </div>
+    </div>
 </section>
 {% endblock %}
 
