--- a/fantasy/templates/fantasy/base.html
+++ b/fantasy/templates/fantasy/base.html
@@ -14,12 +14,6 @@
 
 
 {% block content_header %}
-    {% include '_page_heading.html' with heading_title=page_title size=4 %}
-    {{ block.super }}
-{% endblock %}
-
-
-{% block content %}
 <style>
 #products{ 
     background-color:#F8F8F8;
@@ -161,19 +155,32 @@
 .serv-section-2:hover:before {
     background: #e76668;
 }
+.page-teaser {
+    font-size:.8rem;
+    text-align: center;
+}
 @media all and (max-width: 768px) {
-    .page-header{
+    .page-teaser {
         font-size:.7rem;
     }
 }
 </style>
+    {% include '_page_heading.html' with heading_title=page_title size=4 %}
+    {{ block.super }}
 
-<div class="container page-header">
-    <div class="row p-2">
-        Czy kiedykolwiek grałeś w Fantasy Premier League lub Fantasy Ekstraklasa Polska? Chciałbyś aby to od Ciebie decydowała liczba zdobytych punktów? Dołącz do pierwszej w historii gry Fantasy dla niższych lig! Niezależnie czy grasz w 3 lidze, w B klasie czy lidze juniorskiej - przeniesiemy Twoje rzeczywiste dokonania do gry. Sprawdź swój wynik, zaproś kolegów do zabawy i rywalizuj z nimi!
-        <button type="button" class="btn-pm " data-toggle="modal" data-target="#exampleModal">Zasady gry</button>
+    <div class="container page-teaser">
+        <div center class="row p-2">
+            <div class="col">
+            Czy kiedykolwiek grałeś w Fantasy Premier League lub Fantasy Ekstraklasa Polska? Chciałbyś aby to od Ciebie decydowała liczba zdobytych punktów? Dołącz do pierwszej w historii gry Fantasy dla niższych lig! Niezależnie czy grasz w 3 lidze, w B klasie czy lidze juniorskiej - przeniesiemy Twoje rzeczywiste dokonania do gry. Sprawdź swój wynik, zaproś kolegów do zabawy i rywalizuj z nimi!
+            <button type="button" class="btn-pm " data-toggle="modal" data-target="#exampleModal">Zasady gry</button>
+            </div>
+        </div>
     </div>
-</div>
+{% endblock %}
+
+
+{% block content %}
+
 {% include 'fantasy/filters_desktop.html' %}
 
 <section id="fantasy" class="fantasy">
