--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -31,7 +31,7 @@
             <div class="d-flex flex-column justify-content-center">
                 {{ page_obj.html_first|safe|default:'' }}
 
-                <div>
+                <div class="pt-4 pb-2">
                     {{ page_obj.html_form|safe|default:'' }}
 
                     
