--- a/soccerbase/templates/soccerbase/tables/filters_modal_players.html
+++ b/soccerbase/templates/soccerbase/tables/filters_modal_players.html
@@ -33,4 +33,11 @@
       </div>
   </div>
 
+  <div>
+      <button type="button"  class="{% if foregin %}btn-request btn-requested{% else %}btn-request{% endif %}" onclick="window.location.href='{% if foregin %}{% url 'soccerbase:players' %}{% else %}{% url 'soccerbase:players_quick' 'foregin' %}{% endif %}';">{% if foregin %}Polska{% else %}zagraniczni{% endif %}</button>
+  </div>
+  <div>
+      <button type="button"  class="{% if juniors %}btn-request btn-requested{% else %}btn-request{% endif %}" onclick="window.location.href='{% if juniors %}{% url 'soccerbase:players'%}{% else %}{% url 'soccerbase:players_quick' 'juniors' %}{% endif %}';">{% if junors %}Polska{% else %}młodzieżowiec{% endif %}</button>
+  </div>
+
 {% endblock modal_body %}
