deubg info for seo data

--- a/app/templates/platform/debug_info.html
+++ b/app/templates/platform/debug_info.html
@@ -37,5 +37,13 @@
             last_login: <code>{{ user.last_login }}</code><br>
         </small>
     </div>
+
+    <strong>Page info:</strong>
+    <div class="text-muted" style="border:1px solid #ccc">
+        <small>
+            request.path: <code>{{ request.path }}</code><br>
+            seo_data: <code>{{ SEO_DATA }}</code><br>
+        </small>
+    </div>
 </div>
 {% endif %}
