seo data update

--- a/app/templates/platform/debug_info.html
+++ b/app/templates/platform/debug_info.html
@@ -42,7 +42,7 @@
     <div class="text-muted" style="border:1px solid #ccc">
         <small>
             request.path: <code>{{ request.path }}</code><br>
-            seo_data: <code>{{ SEO_DATA }}</code><br>
+            seo_data: <code>{{ seo }}</code><br>
         </small>
     </div>
 </div>
